# adcp-plotter

./: .gitignore  README.md  pyproject.toml
adcp-plotter/.spyproject/config/backups/: workspace.ini.bak
backend/: data_parsing.py  file_operations.py  metadata_display.py  plot_operations.py
data/: ADCP24_test.adcp  EXAMPLE_adcp_eo.json
frontend/: main_gui.py
tests/: test_adcp_parsing.py  test_json_parsing.py
